<resources>
    <string name="app_name">Fab Hotels</string>
    <string name="get_started">Get Started</string>
    <string name="show">Show</string>
    <string name="enter_username_email">Enter Email</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="article_detail">Article Detail</string>
    <string name="logout">Logout</string>
</resources>